Se creó con Colab

--- a/jleguizamons_Lab2.ipynb
+++ b/jleguizamons_Lab2.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SebastianSLJ/MetNumUN2025I/blob/main/jleguizamons_Lab2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install -U fortran-magic==0.9 ipython==7.34.0 numpy==1.25.2 setuptools==67.7.2"
@@ -1117,7 +1127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "outputId": "d15ece51-296b-484b-a9b8-4e51532de906",
         "colab": {
@@ -1170,7 +1180,7 @@
       "metadata": {
         "id": "rVIE9g1C3fxQ"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1209,7 +1219,7 @@
         "id": "0U8epSeXXqxb",
         "outputId": "558a480a-a701-473d-d6e0-d19315ce20b4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1243,7 +1253,7 @@
         },
         "outputId": "1cb5767d-ea52-41e9-a56b-b433096ad1b8"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1469,7 +1479,7 @@
         },
         "outputId": "a3104a4a-dbf6-4aa9-b1c4-379ca5f20f58"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2379,7 +2389,7 @@
         },
         "outputId": "329516ae-0e72-4418-d7a4-5a5ec39aa010"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2412,7 +2422,7 @@
         "id": "ctLKhZfhFhzb",
         "outputId": "b432fc8e-7ca7-4e4f-9c3d-db45fed4cb64"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2437,7 +2447,7 @@
         "id": "XiaL73crF2zM",
         "outputId": "b1759257-e455-4b70-8687-ea37bf487f46"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2475,7 +2485,7 @@
         "id": "_MAc0pYjxNmt",
         "outputId": "221a3f76-7540-437a-d972-8ea88961c329"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2509,7 +2519,7 @@
         },
         "outputId": "8d33ab2b-fc23-4d8f-a288-0e0730087b73"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2914,7 +2924,7 @@
         },
         "outputId": "af8e105e-8f6d-49b5-d12c-545ffe35855a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2948,7 +2958,7 @@
         },
         "outputId": "f0390d58-9d1d-4696-906f-fc1ea8bafc36"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2974,7 +2984,7 @@
         "id": "Hn5Pq7WGyKBg",
         "outputId": "d8ac5008-6071-419f-bec6-46ba96a3380e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3013,7 +3023,7 @@
         "id": "KZz6zY7FyOL7",
         "outputId": "122621da-775b-4cdd-e871-9daeed6e42c1"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3047,7 +3057,7 @@
         },
         "outputId": "1016a69e-2f07-4415-faa8-43382d18f859"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3464,7 +3474,7 @@
         },
         "outputId": "08e0c9ee-d562-43c2-af20-78c398238fe8"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3498,7 +3508,7 @@
         },
         "outputId": "bfdc9b11-b6a6-4b94-fa40-3f70e4c58a9c"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3524,7 +3534,7 @@
         "id": "kJSgAO7WyaT3",
         "outputId": "25087aef-06e3-4531-c81c-7b7c6d37c73f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3562,7 +3572,7 @@
         "id": "IBz9EZDoydW4",
         "outputId": "a9a3b308-3117-4db9-d290-ebbe943a536d"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3596,7 +3606,7 @@
         },
         "outputId": "a971ab3a-2a49-4d49-f5a0-26b99286121d"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3961,7 +3971,7 @@
         },
         "outputId": "c393be30-8797-40bd-9abc-4ca7b4f79f17"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4142,7 +4152,7 @@
         "id": "7pmPSGyFyvH3",
         "outputId": "6fe0b27a-8eff-4194-c9ee-03d8369a1e36"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4268,7 +4278,7 @@
         "id": "iZks4XAjyzuE",
         "outputId": "de1f9808-8cdf-468f-ee95-ec205d2ad981"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4303,7 +4313,7 @@
         },
         "outputId": "e00d7e54-82de-4e03-a9ad-ec5d9d5176fc"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4343,7 +4353,7 @@
         "id": "TUt0c-tDy6hs",
         "outputId": "1e0269ed-c374-4cb8-a9af-bbaebc63bdaa"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4377,7 +4387,7 @@
         },
         "outputId": "00d41761-a69d-4310-b07d-c781c9b9a485"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4800,7 +4810,7 @@
         },
         "outputId": "ee52fda3-e61b-4b44-9a86-0dc289d15c4e"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4828,7 +4838,7 @@
         "id": "cq3hp2CszEvO",
         "outputId": "cf990e48-615b-48eb-fa87-cc39c295d0b3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4860,7 +4870,7 @@
         },
         "outputId": "4eabdcc7-1346-4dab-8b56-a56f2c367023"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4890,7 +4900,7 @@
         "id": "E8o-eXGgzJic",
         "outputId": "69264ef8-6afa-4588-ac7b-0c5dd41bbe91"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4924,7 +4934,7 @@
         },
         "outputId": "791775ea-bd48-4ed5-8a7b-11fac2762c2d"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5303,7 +5313,7 @@
         },
         "outputId": "886aea21-dced-4146-9ad1-f5e260094ca3"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5379,7 +5389,7 @@
         "id": "Ap31f40SzUuA",
         "outputId": "efce3cf3-c19d-44c5-aaf1-1101d44adfa3"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5708,7 +5718,7 @@
         "id": "d8eiDHB0GpBF",
         "outputId": "4454454f-722c-4ed4-909b-ac783b3174e6"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8799,7 +8809,8 @@
         "JHmGF_mGiXcZ",
         "-6jsBAhQiXcg",
         "_u_fG58UiXcg"
-      ]
+      ],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
