--- a/jleguizamons_Quiz_1_Python_NumPy_UNCode.ipynb
+++ b/jleguizamons_Quiz_1_Python_NumPy_UNCode.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -11,6 +12,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SebastianSLJ/MetNumUN2025I/blob/main/jleguizamons_Quiz_1_Python_NumPy_UNCode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -558,7 +569,7 @@
         },
         "outputId": "d08d4af9-381a-4906-e1b8-6b69d03f1743"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,7 +710,7 @@
         "id": "H8jtLvpMuvep",
         "outputId": "af9a6e5b-8aef-4df5-8f9d-5391f9982cef"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -799,7 +810,7 @@
         },
         "outputId": "25e1bbef-2562-45e6-c8d6-36769bb5db5d"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
